rearrange contact area

--- a/index.html
+++ b/index.html
@@ -522,83 +522,43 @@ Table of Content
 				</div>
 
 
-				<div class="col-md-8 col-sm-6 col-xs-12 contact-area">
-<!--
-					<div class="row no-gutter">
+				<div class="contact-area">
+          <div class="row">
 
-            <form action="contact.php" id="myform" method="post" name="myform">
+    				<!-- Contact Address -->
+    				<div class="contact-title">
+    					<div class="contact-title2 special">
+    						Where do I live?
+    					</div>
+    					Houston, Texas (USA)
+    				</div>
 
-							<div class="col-md-12">
-								<input autocomplete="off" id="name" name="name" placeholder="Your Name" required="" type="text">
-							</div>
+    				<!-- Phone Number -->
+    				<div  class="contact-title">
+    					<div class="contact-title2 special">
+    						Phone
+    					</div>
+    					+1 832.784.2923
+    				</div>
+          <!-- Fax Number -->
+    				<div class="contact-title">
+    					<div class="contact-title2 special">
+    						FAX
+    					</div>
+    					Just Email Me :-)
+    				</div>
 
-							<div class="col-md-12">
-								<input autocomplete="off" id="email" name="email" placeholder="Email" required="" type="email">
-							</div>
+    				<!-- Email Address -->
+    				<div class="contact-title">
+    					<div class="contact-title2 special">
+    						E-mail
+    					</div>
+    					melissa@portalesphotography.com
+    				</div>
 
-							<div class="col-md-12">
-								<textarea id="message" name="message" placeholder="Your Message"></textarea>
-							</div>
-
-							<div class="col-md-12">
-								<input class="btn" type="submit" value="Send">
-							</div>
-
-							<div class="ajax_response" id="success_message">
-							</div>
-
-						</form>
-
-						<div id="responsemessage"></div>
-
-						<div id="response"></div>
-
-					</div>
--->
-				</div>
-
-			</div>
-
-
-			<div class="empty-footer"></div>
-
-			<div class="row">
-
-				<!-- Contact Address -->
-				<div class="col-md-3 col-sm-6">
-					<div class="contact-title special">
-						ADDRESS
-					</div>
-					Houston, Texas (USA)
-				</div>
-
-				<!-- Phone Number -->
-				<div class="col-md-3 col-sm-6">
-					<div class="contact-title special">
-						Phone
-					</div>
-					+1 832.784.2923
-				</div>
-
-                <!-- Fax Number -->
-				<div class="col-md-3 col-sm-6">
-					<div class="contact-title special">
-						FAX
-					</div>
-					Just Email Me :-)
-				</div>
-
-				<!-- Email Address -->
-				<div class="col-md-3 col-sm-6">
-					<div class="contact-title special">
-						E-mail
-					</div>
-					melissa@portalesphotography.com
-				</div>
-
-			</div>
-
+    			</div>
 		</div>
+
 	</section>
 
 <!-- =========
