remove third education section and lower the weight in css

--- a/index.html
+++ b/index.html
@@ -171,26 +171,26 @@ Table of Content
 							<span class="education-title clearfix">Web Developer</span><!-- Edit Education title-->
 
 							<div class="clearfix">
-								<span class="edu-uni-name">CodeAcademy</span>, <span class="edu-year">Not too long ago..</span><!-- Edit University Name & Year -->
+								<span class="edu-uni-name">CodeAcademy</span>, <span class="edu-year">Not long ago..</span><!-- Edit University Name & Year -->
 							</div>
 
 							<span class="education-detail">New York City, NY</span><!-- Edit some information about what you did at this university -->
 
 						</div>
 
-						<div class="col-md-6">
+            <div class="col-md-6">
 
-							<!-- Education details 2 -->
-							<span class="education-title clearfix">Computer Science</span><!-- Edit Education title-->
+              <!-- Education details 2 -->
+              <span class="education-title clearfix">Photography</span><!-- Edit Education title-->
 
-							<div class="clearfix">
-								<span class="edu-uni-name">UACT</span>, <span class="edu-year">Awhile ago..</span><!-- Edit University Name & Year -->
-							</div>
-							<span class="education-detail">Phoenix, Arizona</span><!-- Edit some information about what you did at this university -->
+              <div class="clearfix">
+                <span class="edu-uni-name">Independent Study</span>, <span class="edu-year">Since 2011</span><!-- Edit University Name & Year -->
+              </div>
+              <span class="education-detail">Houston, Texas</span><!-- Edit some information about what you did at this university -->
 
-						</div>
+            </div>
 
-					</div>
+          </div>
 
 				</div>
 
