added sms and click to email code and css style update for those links

--- a/index.html
+++ b/index.html
@@ -538,14 +538,15 @@ Table of Content
     					<div class="contact-title2 special">
     						Phone
     					</div>
-    					+1 832.784.2923
+    					<a class="phone" href="tel:8327842923">+1 832.784.2923</a>
     				</div>
-          <!-- Fax Number -->
+          <!-- Fax Number lol -->
     				<div class="contact-title">
     					<div class="contact-title2 special">
     						FAX
     					</div>
-    					Just Email Me :-)
+    					Just kidding, what's a fax? :-) </br>
+              You can <a class="phone" href="sms:8327842923">text</a> me, I'll respond.
     				</div>
 
     				<!-- Email Address -->
@@ -553,7 +554,7 @@ Table of Content
     					<div class="contact-title2 special">
     						E-mail
     					</div>
-    					melissa@portalesphotography.com
+              <a class="phone" href="mailto:melissa@portalesphotography.com?Subject=Need%20a%20Photographer" target="_top">melissa@portalesphotography.com</a>
     				</div>
 
     			</div>
