added photography skill

--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@ Table of Content
 					HTML
 
 					<div class="progress skill-bar">
-						<div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" class="progress-bar progress-bar-striped active" role="progressbar">
-							<span class="skill"><i class="val">100%</i></span>
+						<div aria-valuemax="100" aria-valuemin="0" aria-valuenow="97" class="progress-bar progress-bar-striped active" role="progressbar">
+							<span class="skill"><i class="val">97%</i></span>
 						</div>
 					</div>
 
@@ -229,12 +229,24 @@ Table of Content
 					JavaScript
 
 					<div class="progress skill-bar">
-						<div aria-valuemax="100" aria-valuemin="0" aria-valuenow="72" class="progress-bar progress-bar-striped active" role="progressbar">
-							<span class="skill"><i class="val">72%</i></span>
+						<div aria-valuemax="100" aria-valuemin="0" aria-valuenow="62" class="progress-bar progress-bar-striped active" role="progressbar">
+							<span class="skill"><i class="val">62%</i></span>
 						</div>
 					</div>
 
-					<!-- Skill Bar 4 -->
+
+          <!-- Skill Bar 4 -->
+          Photography (side note: love my Nikon D800)
+
+          <div class="progress skill-bar">
+            <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" class="progress-bar progress-bar-striped active" role="progressbar">
+              <span class="skill"><i class="val">100%</i></span>
+            </div>
+          </div>
+
+
+
+					<!-- Skill Bar 5 -->
 					Photoshop
 
 					<div class="progress skill-bar">
@@ -510,9 +522,10 @@ Table of Content
 							<h2>Melissa Portales</h2><!-- Edit Name -->
 
 							<p class="icon-links">
-        	                    <a href="#"><span class="fa fa-twitter"></span></a><!-- Edit Twitter link -->
-    	                        <a href="#"><span class="fa fa-facebook"></span></a><!-- Edit Facebook link -->
-	                            <a href="#"><span class="fa fa-instagram"></span></a><!-- Edit instagram link -->
+        	                    <a href="https://twitter.com/melissaportales"><span class="fa fa-twitter"></span></a><!-- Edit Twitter link -->
+    	                        <a href="https://www.facebook.com/houstoneventphotographer/"><span class="fa fa-facebook"></span></a><!-- Edit Facebook link -->
+	                            <a href="https://www.instagram.com/portalesphotography/"><span class="fa fa-instagram"></span></a><!-- Edit instagram link -->
+                              <a href="https://plus.google.com/u/0/b/112110416407583168485/+Portalesphotography"><span class="fa fa-instagram"></span></a><!-- Edit Google Plus link -->
                             </p>
 
 						</div>
