added a link to smugmug hosted site: photos.portalesphotography.com

--- a/index.html
+++ b/index.html
@@ -427,7 +427,8 @@ Table of Content
 			<h2 class="section-title"><span class="kc-animated-underline">Portales Photography Work</span></h2><!-- Edit Section Title -->
 
 			<div class="sub-title">Some of my previous awesome work!</div><!-- Edit Portfolio subtitle -->
-
+      <div class="sub-title">Current clients can click
+        <a href="http://photos.portalesphotography.com/browse" target="blank">here</a> to order prints.</div><!-- Edit Portfolio subtitle -->
 			<div class="empty"></div>
 		</div>
 
