added new portfolio links and img's

--- a/index.html
+++ b/index.html
@@ -491,7 +491,61 @@ Table of Content
 					</div>
 				</div>
 
+      	<!-- Portfolio 5 -->
+    				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-col wow fadeIn" data-wow-delay="0.3s" style="visibility: hidden; animation-delay: 0.3s; animation-name: none;">
+    					<div class="hovereffect">
 
+    						<img alt="" class="img-responsive" src="img/portfolio/5.jpg"><!-- Edit Portfolio Image URL -->
+
+    						<div class="overlay">
+    							<h2>Recent Grads</h2><!-- Edit Title -->
+    							<a class="info portfolio-button" href="http://photos.portalesphotography.com/Senior-Portaits" target="blank">See More</a><!-- Edit portfolio link -->
+    						</div>
+
+    					</div>
+    				</div>
+
+    				<!-- Portfolio 6 -->
+    				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-col wow fadeIn" data-wow-delay="0.3s" style="visibility: hidden; animation-delay: 0.3s; animation-name: none;">
+    					<div class="hovereffect">
+
+    						<img alt="" class="img-responsive" src="img/portfolio/6.jpg"><!-- Edit Portfolio Image URL -->
+
+    						<div class="overlay">
+    							<h2>Landscapes</h2><!-- Edit Title -->
+    							<a class="info portfolio-button" href="http://photos.portalesphotography.com/Photography/Landscapes" target="blank">See More</a><!-- Edit portfolio link -->
+    						</div>
+
+    					</div>
+    				</div>
+
+    				<!-- Portfolio 7 -->
+    				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-col wow fadeIn" data-wow-delay="0.3s" style="visibility: hidden; animation-delay: 0.3s; animation-name: none;">
+    					<div class="hovereffect">
+
+    						<img alt="" class="img-responsive" src="img/portfolio/7.jpg"><!-- Edit Portfolio Image URL -->
+
+    						<div class="overlay">
+    							<h2>Lines</h2><!-- Edit Title -->
+    							<a class="info portfolio-button" href="http://photos.portalesphotography.com/Photography/Lines" target="blank">See More</a><!-- Edit portfolio link -->
+    						</div>
+
+    					</div>
+    				</div>
+
+    				<!-- Portfolio 8 -->
+    				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-col wow fadeIn" data-wow-delay="0.3s" style="visibility: hidden; animation-delay: 0.3s; animation-name: none;">
+    					<div class="hovereffect">
+
+    						<img alt="" class="img-responsive" src="img/portfolio/8.jpg"><!-- Edit Portfolio Image URL -->
+
+    						<div class="overlay">
+    							<h2>Things that make me smile</h2><!-- Edit Title -->
+    							<a class="info portfolio-button" href="http://photos.portalesphotography.com/RandomOpps/Random-Captures/" target="blank">See More</a><!-- Edit portfolio link -->
+    						</div>
+
+    					</div>
+    				</div>
 
 			</div>
 
