added sunmap.html and a link to sunmap from the index.html

--- a/index.html
+++ b/index.html
@@ -416,6 +416,9 @@ Table of Content
 			</div>
 
 		</div>
+    <div class="kc-facts-stat">
+    <h4><a href="sunmap.html" target="_blank">Where will the sun be?</a></h4>
+  </div>
 	</section>
 
 <!-- =========
