added pricing rates to the page

--- a/index.html
+++ b/index.html
@@ -283,6 +283,7 @@ Table of Content
 					<i aria-hidden="true" class="fa fa-html5 fa-2x"></i><!-- Edit Service Icon -->
 
 					<div class="kc-service-title">Mini Session</div><!-- Edit Service Title-->
+          <div class="kc-service-title">$200</div><!-- Edit Service Price-->
 
 					<div class="kc-service-description">
 					<ul class="services">
@@ -302,6 +303,7 @@ Table of Content
 					<i aria-hidden="true" class="fa fa-picture-o fa-2x"></i><!-- Edit Service Icon -->
 
 					<div class="kc-service-title">Full Session</div><!-- Edit Service Title-->
+          <div class="kc-service-title">$350</div><!-- Edit Service Price-->
 
 					<div class="kc-service-description">
 					<ul class="services">
@@ -320,6 +322,7 @@ Table of Content
 					<i aria-hidden="true" class="fa fa-volume-up fa-2x"></i><!-- Edit Service Icon -->
 
 					<div class="kc-service-title">Special Events</div><!-- Edit Service Title-->
+          <div class="kc-service-title">$550</div><!-- Edit Service Price-->
 
 					<div class="kc-service-description">
 					<ul class="services">
@@ -336,7 +339,8 @@ Table of Content
 
 					<i aria-hidden="true" class="fa fa-life-ring fa-2x"></i><!-- Edit Service Icon -->
 
-					<div class="kc-service-title">On-going Rates</div><!-- Edit Service Title-->
+					<div class="kc-service-title">On-going </div><!-- Edit Service Title-->
+          <div class="kc-service-title">Contracted Rates</div><!-- Edit Service Title-->
 
 					<div class="kc-service-description">
 					<ul class="services">
