let customers know that texting is the way to go

--- a/index.html
+++ b/index.html
@@ -621,7 +621,8 @@ Table of Content
     						FAX
     					</div>
     					Just kidding, what's a fax? :-) </br>
-              You can <a class="phone" href="sms:8327842923">text</a> me, I'll respond.
+              You can <a class="phone" href="sms:8327842923">text</a> me, I'll respond.</br>
+              FYI, texting is the fastest way to get ahold of me. </br>
     				</div>
 
     				<!-- Email Address -->
