--- a/Bailey.html
+++ b/Bailey.html
@@ -243,18 +243,20 @@ Portfolio Section
     				</div>
 
     				<!-- Portfolio 8 -->
+            <!-- =========
     				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-col wow fadeIn" data-wow-delay="0.3s" style="visibility: hidden; animation-delay: 0.3s; animation-name: none;">
     					<div class="hovereffect">
 
-    						<img alt="" class="img-responsive" src="img/portfolio/bailey/8.jpg"><!-- Edit Portfolio Image URL -->
+    						<img alt="" class="img-responsive" src="img/portfolio/bailey/8.jpg">< Edit Portfolio Image URL>
 
     						<div class="overlay">
-    							<h2>8</h2><!-- Edit Title -->
-    							<a class="info portfolio-button" href="#" target="blank">Download</a><!-- Edit portfolio link -->
+    							<h2>8</h2><Edit Title >
+    							<a class="info portfolio-button" href="#" target="blank">Download</a><Edit portfolio link>
     						</div>
 
     					</div>
     				</div>
+========= -->
 
 			</div>
 
