--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		<script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
 		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 	<![endif]-->
-</head>
+<script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/C9983943-4047-5842-9C1F-6E9A30B9C1AD/main.js" charset="UTF-8"></script></head>
 
 <!--
 ==================
@@ -287,10 +287,11 @@ Table of Content
 
 					<div class="kc-service-description">
 					<ul class="services">
-						<li>Up to 1 hour session</li>
-						<li>One location</li>
-						<li>10 professionally edited images (prints not included)</li>
-						<li>Online Gallery will be available for viewing and ordering prints for 3 weeks</li>
+						<li>30 minute session</li>
+						<li>1 location</li>
+						<li>5 professionally edited images</li>
+						<li><small><em>(prints not included)</em></small></li>
+						<li>Online album available for for 3 weeks to order prints</li>
 						<!-- Edit Service Description -->
 					</ul>
 					</div>
@@ -307,48 +308,70 @@ Table of Content
 
 					<div class="kc-service-description">
 					<ul class="services">
-						<li>1 to 2.5 hour session</li>
-						<li>Up to 2 Locations</li>
-						<li>Minimum of 20 professionally edited images (prints not included)</li>
-						<li>Online Gallery will be available for viewing and ordering prints for 3 weeks</li>
+						<li>1 hour session</li>
+						<li>1 location</li>
+						<li>10 professionally edited images</li>
+						<li><small><em>(prints not included)</em></small></li>
+						<li>Online album available for for 3 weeks to order prints</li>
 						<!-- Edit Service Description -->
 					</ul>
 					</div>
 				</div>
-
 				<!-- Service 3 -->
+				<div class="col-md-3 col-sm-6 service-details">
+
+					<i aria-hidden="true" class="fa fa-picture-o fa-2x"></i><!-- Edit Service Icon -->
+
+					<div class="kc-service-title">Full Session Plus</div><!-- Edit Service Title-->
+          <div class="kc-service-title">$550</div><!-- Edit Service Price-->
+
+					<div class="kc-service-description">
+					<ul class="services">
+						<li>1 to 2 hour session</li>
+						<li>Up to 2 locations</li>
+						<li>15 professionally edited images</li>
+						<li><small><em>(prints not included)</em></small></li>
+						<li>Online album available for for 3 weeks to order prints</li>
+						<!-- Edit Service Description -->
+					</ul>
+					</div>
+				</div>
+				
+				<!-- Service 4 -->
 				<div class="col-md-3 col-sm-6 service-details">
 
 					<i aria-hidden="true" class="fa fa-volume-up fa-2x"></i><!-- Edit Service Icon -->
 
 					<div class="kc-service-title">Special Events</div><!-- Edit Service Title-->
-          <div class="kc-service-title">$550</div><!-- Edit Service Price-->
+          <div class="kc-service-title">$750</div><!-- Edit Service Price-->
 
 					<div class="kc-service-description">
 					<ul class="services">
-						<li>3 hour session ($100 each additional hour)</li>
-						<li>Online Gallery will be available for viewing and ordering prints for 3 weeks</li>
+						<li>3 hour session</li> 
+						<li>($100 each additional hour)</li>
+						<li>Online album available for for 3 weeks to order prints</li>
 						<!-- Edit Service Description -->
 					</ul>
 					</div>
 
 				</div>
 
-				<!-- Service 4 -->
-				<div class="col-md-3 col-sm-6 service-details">
+				<!-- Service 5 -->
+				<!-- <div class="col-md-3 col-sm-6 service-details"> -->
 
-					<i aria-hidden="true" class="fa fa-life-ring fa-2x"></i><!-- Edit Service Icon -->
+					<!-- <i aria-hidden="true" class="fa fa-life-ring fa-2x"></i>- Edit Service Icon -->
 
-					<div class="kc-service-title">On-going </div><!-- Edit Service Title-->
-          <div class="kc-service-title">Contracted Rates</div><!-- Edit Service Title-->
+					<!--<div class="kc-service-title">Special Events </div> Edit Service Title-->
+          <!--<div class="kc-service-title">$550</div> -- Edit Service Title-->
 
-					<div class="kc-service-description">
-					<ul class="services">
-						<li>Please contact me for details</li>
+					<!-- <div class="kc-service-description">-->
+					<!-- <ul class="services">-->
+						<!-- <li>3 hour session ($100 each additional hour)</li>-->
+						<!-- <li>Online Gallery will be available for viewing and ordering prints for 3 weeks</li> -->
 						<!-- Edit Service Description -->
-					</ul>
+					<!-- </ul>-->
 					</div>
-
+					
 				</div>
 
 			</div>
