--- a/index.html
+++ b/index.html
@@ -100,7 +100,6 @@ Table of Content
 				<ul class="nav navbar-nav navbar-right">
 					<li><a data-scroll="" href="#home">Home</a></li>
 					<li><a data-scroll="" href="#about">About</a></li>
-					<li><a data-scroll="" href="#services">Services</a></li>
 					<li><a data-scroll="" href="#portfolio">Portfolio</a></li>
 					<li><a data-scroll="" href="#contact">Contact</a></li>
 				</ul>
@@ -143,7 +142,10 @@ Table of Content
 				</div>
 
 				<div class="col-md-8 col-sm-8">
-					My name is Melissa Portales and I'm a photographer currently based in Houston, Texas. My full-time career is in technology and I've applied my technical skills to my photography. Every time I book a photo event I think of how lucky I am to be doing something I truly enjoy. I love capturing moments and delivering  experiences through my photos. Those who know me know that I’m a person of few words (when it comes to talking about myself). Therefore, this section of my website is hard for me to fill. The photos on my site should give you some insight to my style of photography. <!-- Edit some information about you-->
+					My name is Melissa Portales and I'm a photographer currently based in Houston, Texas. My full-time career is in technology and I've applied my technical skills to my photography. My camera is my paint brush, it allows me to slow down and appreciate the world around me. So often we are going through life walking by the ordinary without taking the time to enjoy and explore. I hope my photography helps the viewer to recognize the beauty in our everyday environment, both in nature and in our manufactured surroundings.
+				<br></br>	Thanks for stopping by and taking a look.
+				<br></br>
+				<!-- Edit some information about you-->
 				</div>
 
 				<div class="col-md-2 col-sm-4">
@@ -236,7 +238,7 @@ Table of Content
 
 
           <!-- Skill Bar 4 -->
-          Photography (side note: love my Nikon D800)
+          Photography (side note: love my Nikon D800 and FujiFilm X-T3)
 
           <div class="progress skill-bar">
             <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" class="progress-bar progress-bar-striped active" role="progressbar">
@@ -255,123 +257,6 @@ Table of Content
 						</div>
 					</div>
 
-				</div>
-
-			</div>
-
-		</div>
-	</section>
-
-<!-- =========
-[1.4] Services Section
-========= -->
-
-	<section id="services">
-		<div class="container">
-
-			<h2 class="section-title"><span class="kc-animated-underline">My Services</span></h2><!-- Edit Section Title -->
-
-			<div class="sub-title">various packages to choose from</div><!-- Edit Section Subitle -->
-
-			<div class="empty"></div>
-
-			<div class="row">
-
-				<!-- Service 1 -->
-				<div class="col-md-3 col-sm-6 service-details">
-
-					<i aria-hidden="true" class="fa fa-html5 fa-2x"></i><!-- Edit Service Icon -->
-
-					<div class="kc-service-title">Mini Session</div><!-- Edit Service Title-->
-          <div class="kc-service-title">$200</div><!-- Edit Service Price-->
-
-					<div class="kc-service-description">
-					<ul class="services">
-						<li>30 minute session</li>
-						<li>1 location</li>
-						<li>5 professionally edited images</li>
-						<li><small><em>(prints not included)</em></small></li>
-						<li>Online album available for for 3 weeks to order prints</li>
-						<!-- Edit Service Description -->
-					</ul>
-					</div>
-
-				</div>
-
-				<!-- Service 2 -->
-				<div class="col-md-3 col-sm-6 service-details">
-
-					<i aria-hidden="true" class="fa fa-picture-o fa-2x"></i><!-- Edit Service Icon -->
-
-					<div class="kc-service-title">Full Session</div><!-- Edit Service Title-->
-          <div class="kc-service-title">$350</div><!-- Edit Service Price-->
-
-					<div class="kc-service-description">
-					<ul class="services">
-						<li>1 hour session</li>
-						<li>1 location</li>
-						<li>10 professionally edited images</li>
-						<li><small><em>(prints not included)</em></small></li>
-						<li>Online album available for for 3 weeks to order prints</li>
-						<!-- Edit Service Description -->
-					</ul>
-					</div>
-				</div>
-				<!-- Service 3 -->
-				<div class="col-md-3 col-sm-6 service-details">
-
-					<i aria-hidden="true" class="fa fa-picture-o fa-2x"></i><!-- Edit Service Icon -->
-
-					<div class="kc-service-title">Full Session Plus</div><!-- Edit Service Title-->
-          <div class="kc-service-title">$550</div><!-- Edit Service Price-->
-
-					<div class="kc-service-description">
-					<ul class="services">
-						<li>1 to 2 hour session</li>
-						<li>Up to 2 locations</li>
-						<li>15 professionally edited images</li>
-						<li><small><em>(prints not included)</em></small></li>
-						<li>Online album available for for 3 weeks to order prints</li>
-						<!-- Edit Service Description -->
-					</ul>
-					</div>
-				</div>
-				
-				<!-- Service 4 -->
-				<div class="col-md-3 col-sm-6 service-details">
-
-					<i aria-hidden="true" class="fa fa-volume-up fa-2x"></i><!-- Edit Service Icon -->
-
-					<div class="kc-service-title">Special Events</div><!-- Edit Service Title-->
-          <div class="kc-service-title">$750</div><!-- Edit Service Price-->
-
-					<div class="kc-service-description">
-					<ul class="services">
-						<li>3 hour session</li> 
-						<li>($100 each additional hour)</li>
-						<li>Online album available for for 3 weeks to order prints</li>
-						<!-- Edit Service Description -->
-					</ul>
-					</div>
-
-				</div>
-
-				<!-- Service 5 -->
-				<!-- <div class="col-md-3 col-sm-6 service-details"> -->
-
-					<!-- <i aria-hidden="true" class="fa fa-life-ring fa-2x"></i>- Edit Service Icon -->
-
-					<!--<div class="kc-service-title">Special Events </div> Edit Service Title-->
-          <!--<div class="kc-service-title">$550</div> -- Edit Service Title-->
-
-					<!-- <div class="kc-service-description">-->
-					<!-- <ul class="services">-->
-						<!-- <li>3 hour session ($100 each additional hour)</li>-->
-						<!-- <li>Online Gallery will be available for viewing and ordering prints for 3 weeks</li> -->
-						<!-- Edit Service Description -->
-					<!-- </ul>-->
-					</div>
-					
 				</div>
 
 			</div>
@@ -600,7 +485,7 @@ Table of Content
 
 					<div class="kc-profileimg-hovereffect">
 
-						<img alt="" class="img-responsive" src="img/melissa.jpg"><!-- Edit Profile Image -->
+						<img alt="" class="img-responsive" src="img/melissa-360x360.jpg"><!-- Edit Profile Image -->
 
 						<div class="overlay">
 
@@ -636,19 +521,9 @@ Table of Content
     					<div class="contact-title2 special">
     						Phone
     					</div>
-    					<a class="phone" href="tel:8327842923">+1 832.784.2923</a>
+    					<a class="phone" href="tel:6024925060">+1 602.492.5060</a>
     				</div>
-          <!-- Fax Number lol -->
-    				<div class="contact-title">
-    					<div class="contact-title2 special">
-    						FAX
-    					</div>
-    					Just kidding, what's a fax? :-) </br>
-              You can <a class="phone" href="sms:8327842923">text</a> me, I'll respond.</br>
-              FYI, texting is the fastest way to get ahold of me. </br>
-    				</div>
-
-    				<!-- Email Address -->
+          			<!-- Email Address -->
     				<div class="contact-title">
     					<div class="contact-title2 special">
     						E-mail
@@ -671,7 +546,7 @@ Table of Content
 
 			<h2></h2><!-- Empty heading -->
 
-			<p>All rights reserved © 2017 <span class="special">Melissa</span>Portales<!-- Edit Title -->
+			<p>All rights reserved © 2012 <span class="special">Melissa</span>Portales<!-- Edit Title -->
 			<br>
 
 
