--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@ Table of Content
 				<ul class="nav navbar-nav navbar-right">
 					<li><a data-scroll="" href="#home">Home</a></li>
 					<li><a data-scroll="" href="#about">About</a></li>
+					<li><a data-scroll="" href="#services">Services</a></li>
 					<li><a data-scroll="" href="#portfolio">Portfolio</a></li>
 					<li><a data-scroll="" href="#contact">Contact</a></li>
 				</ul>
@@ -147,12 +148,7 @@ Table of Content
 				<br></br>
 				<!-- Edit some information about you-->
 				</div>
-
-				<div class="col-md-2 col-sm-4">
-					<a class="kc-pdf-resume" href="https://drive.google.com/open?id=0B0YXHmcAzac1cGw3WnRYVlRYUXM"target="_blank"><i aria-hidden="true" class="fa fa-file-pdf-o"></i> Download</a><!-- Edit Download link -->
-					<a class="kc-contact" data-scroll="" href="#contact"><i aria-hidden="true" class="fa fa-envelope-o"></i> Contact me</a>
-				</div>
-
+				
 			</div>
 
 			<div class="empty"></div>
@@ -265,6 +261,100 @@ Table of Content
 	</section>
 
 <!-- =========
+[1.4] Services Section
+========= -->
+
+	<section id="services">
+		<div class="container">
+
+			<h2 class="section-title"><span class="kc-animated-underline">Services</span></h2><!-- Edit Section Title -->
+
+			<div class="sub-title">Please contact me if you don't see a session that fits your needs.</div><!-- Edit Section Subitle -->
+
+			<div class="empty"></div>
+
+			<div class="row">
+
+				<!-- Service 1 -->
+				<div class="col-md-3 col-sm-6 service-details">
+
+					<i aria-hidden="true" class="fa fa-html5 fa-2x"></i><!-- Edit Service Icon -->
+
+					<div class="kc-service-title">Mini Session</div><!-- Edit Service Title-->
+          <div class="kc-service-title">$200</div><!-- Edit Service Price-->
+
+					<div class="kc-service-description">
+					<ul class="services">
+						<li>Up to 1 hour session</li>
+						<li>One location</li>
+						<li>10 professionally edited images (prints not included)</li>
+						<li>Online Gallery will be available for viewing and ordering prints for 3 weeks</li>
+						<!-- Edit Service Description -->
+					</ul>
+					</div>
+
+				</div>
+
+				<!-- Service 2 -->
+				<div class="col-md-3 col-sm-6 service-details">
+
+					<i aria-hidden="true" class="fa fa-picture-o fa-2x"></i><!-- Edit Service Icon -->
+
+					<div class="kc-service-title">Full Session</div><!-- Edit Service Title-->
+          <div class="kc-service-title">$350</div><!-- Edit Service Price-->
+
+					<div class="kc-service-description">
+					<ul class="services">
+						<li>1 to 2.5 hour session</li>
+						<li>Up to 2 Locations</li>
+						<li>Minimum of 20 professionally edited images (prints not included)</li>
+						<li>Online Gallery will be available for viewing and ordering prints for 3 weeks</li>
+						<!-- Edit Service Description -->
+					</ul>
+					</div>
+				</div>
+
+				<!-- Service 3 -->
+				<div class="col-md-3 col-sm-6 service-details">
+
+					<i aria-hidden="true" class="fa fa-volume-up fa-2x"></i><!-- Edit Service Icon -->
+
+					<div class="kc-service-title">Special Events</div><!-- Edit Service Title-->
+          <div class="kc-service-title">$550</div><!-- Edit Service Price-->
+
+					<div class="kc-service-description">
+					<ul class="services">
+						<li>3 hour session ($100 each additional hour)</li>
+						<li>Online Gallery will be available for viewing and ordering prints for 3 weeks</li>
+						<!-- Edit Service Description -->
+					</ul>
+					</div>
+
+				</div>
+
+				<!-- Service 4 -->
+				<div class="col-md-3 col-sm-6 service-details">
+
+					<i aria-hidden="true" class="fa fa-life-ring fa-2x"></i><!-- Edit Service Icon -->
+
+					<div class="kc-service-title">On-going </div><!-- Edit Service Title-->
+          <div class="kc-service-title">Contracted Rates</div><!-- Edit Service Title-->
+
+					<div class="kc-service-description">
+					<ul class="services">
+						<li>Please contact me for details</li>
+						<!-- Edit Service Description -->
+					</ul>
+					</div>
+
+				</div>
+
+			</div>
+
+		</div>
+	</section>
+
+<!-- =========
 [1.5] Facts section
 ========= -->
 
@@ -279,7 +369,7 @@ Table of Content
 
 						<i aria-hidden="true" class="fa fa-smile-o fa-3x facts-icon"></i><!-- Edit Facts Icon -->
 
-						<h3 class="counter">171</h3> <!-- Edit number-->
+						<h3 class="counter">196</h3> <!-- Edit number-->
 
 						<h4>Happy Clients</h4><!-- Edit Title-->
 
@@ -305,7 +395,7 @@ Table of Content
 
 						<i aria-hidden="true" class="fa fa-coffee fa-3x facts-icon"></i><!-- Edit Facts Icon -->
 
-						<h3 class="counter">1360</h3><!-- Edit number-->
+						<h3 class="counter">2360</h3><!-- Edit number-->
 
 						<h4>Cups of Coffee</h4><!-- Edit Title-->
 
@@ -340,11 +430,7 @@ Table of Content
 	<section id="portfolio">
 		<div class="container">
 			<h2 class="section-title"><span class="kc-animated-underline">Portales Photography Work</span></h2><!-- Edit Section Title -->
-
 			<div class="sub-title">Some of my previous awesome work!</div><!-- Edit Portfolio subtitle -->
-      <div class="sub-title">Current clients can click
-        <a href="http://photos.portalesphotography.com/browse" target="blank">here</a> to order prints.</div><!-- Edit Portfolio subtitle -->
-			<div class="empty"></div>
 		</div>
 
 		<div class="container">
@@ -405,69 +491,7 @@ Table of Content
 
 					</div>
 				</div>
-
-      	<!-- Portfolio 5 -->
-    				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-col wow fadeIn" data-wow-delay="0.3s" style="visibility: hidden; animation-delay: 0.3s; animation-name: none;">
-    					<div class="hovereffect">
-
-    						<img alt="" class="img-responsive" src="img/portfolio/5.jpg"><!-- Edit Portfolio Image URL -->
-
-    						<div class="overlay">
-    							<h2>Recent Grads</h2><!-- Edit Title -->
-    							<a class="info portfolio-button" href="http://photos.portalesphotography.com/Senior-Portaits" target="blank">See More</a><!-- Edit portfolio link -->
-    						</div>
-
-    					</div>
-    				</div>
-
-    				<!-- Portfolio 6 -->
-    				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-col wow fadeIn" data-wow-delay="0.3s" style="visibility: hidden; animation-delay: 0.3s; animation-name: none;">
-    					<div class="hovereffect">
-
-    						<img alt="" class="img-responsive" src="img/portfolio/6.jpg"><!-- Edit Portfolio Image URL -->
-
-    						<div class="overlay">
-    							<h2>Landscapes</h2><!-- Edit Title -->
-    							<a class="info portfolio-button" href="http://photos.portalesphotography.com/Photography/Landscapes" target="blank">See More</a><!-- Edit portfolio link -->
-    						</div>
-
-    					</div>
-    				</div>
-
-    				<!-- Portfolio 7 -->
-    				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-col wow fadeIn" data-wow-delay="0.3s" style="visibility: hidden; animation-delay: 0.3s; animation-name: none;">
-    					<div class="hovereffect">
-
-    						<img alt="" class="img-responsive" src="img/portfolio/7.jpg"><!-- Edit Portfolio Image URL -->
-
-    						<div class="overlay">
-    							<h2>Lines</h2><!-- Edit Title -->
-    							<a class="info portfolio-button" href="http://photos.portalesphotography.com/Photography/Lines" target="blank">See More</a><!-- Edit portfolio link -->
-    						</div>
-
-    					</div>
-    				</div>
-
-    				<!-- Portfolio 8 -->
-    				<div class="col-md-3 col-sm-6 col-xs-12 portfolio-col wow fadeIn" data-wow-delay="0.3s" style="visibility: hidden; animation-delay: 0.3s; animation-name: none;">
-    					<div class="hovereffect">
-
-    						<img alt="" class="img-responsive" src="img/portfolio/8.jpg"><!-- Edit Portfolio Image URL -->
-
-    						<div class="overlay">
-    							<h2>Things that make me smile</h2><!-- Edit Title -->
-    							<a class="info portfolio-button" href="http://photos.portalesphotography.com/RandomOpps/Random-Captures/" target="blank">See More</a><!-- Edit portfolio link -->
-    						</div>
-
-    					</div>
-    				</div>
-
-			</div>
-
-		</div>
 	</section>
-
-
 <!-- =========
 [1.9] Contact Section
 ========= -->
@@ -511,7 +535,7 @@ Table of Content
     				<!-- Contact Address -->
     				<div class="contact-title">
     					<div class="contact-title2 special">
-    						Where do I live?
+    						Where am I based?
     					</div>
     					Houston, Texas (USA)
     				</div>
@@ -519,9 +543,9 @@ Table of Content
     				<!-- Phone Number -->
     				<div  class="contact-title">
     					<div class="contact-title2 special">
-    						Phone
+    						Let's Chat
     					</div>
-    					<a class="phone" href="tel:6024925060">+1 602.492.5060</a>
+    					<a href="https://calendly.com/portalesphotography/15min/" target="_top">Book a time here!</a>
     				</div>
           			<!-- Email Address -->
     				<div class="contact-title">
